# POSNext

./: .gitignore  CLAUDE.md  FRIENDS_AND_FAMILY_PRICING.md  MANAGER_APPROVAL_GUIDE.md  package.json  pyproject.toml
.github/workflows/: ci.yml  desktop-build.yml  docs.yml  linter.yml  update-translations.yml
POS/: .claude.md  .env.development  components.d.ts  index.html  package.json  playwright.config.js  vite.config.js  vite.config.js.timestamp-1774619831242-d0c7f5dffcfb3.mjs  vitest.config.js
POS/src/: App.vue  index.css  main.js  router.js  socket.js  translation.js
POS/tests/: runtimeConfig.test.js  setup.js
desktop/: .gitignore  INSTALL.md  README.md  package.json
desktop/customers/: _template.json
desktop/scripts/: build-customer.mjs  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CODING_STANDARDS.md  FREE_ITEM_WAREHOUSE_LOGIC.md  GIFT_CARD_REFACTORING_PLAN.md  GIFT_CARD_SYNC_PLAN.md  LOCALIZATION.md  OFFLINE_DATA_GUIDE.md  PRINTING.md  README.md  Translation-Migration-Guide.md  customer_display_backend.diff  customer_display_publisher.diff  customer_display_realtime.diff  customer_display_router.diff
pos-next-desktop/: .gitignore  PLAN.md  README.md  package.json  vite.config.electron.js
pos_next/: __init__.py  company_isolation.py  hooks.py  install.py  patches.txt  realtime_events.py  test_company_isolation.py  test_packed_items_regression.py  test_promotions.py  uninstall.py  validations.py
scripts/: generate_docs.py  migrate_translations.py
(+537 files in other folders)
