[package]
name = "pos-next-desktop"
version = "0.1.0"
description = "POS Next Windows desktop shell"
authors = ["Blaze Technology Solutions"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pos_next_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
